<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:title=""
        android:icon="@drawable/ic_menu_lateral"
        app:showAsAction="always"
        >
<menu>
    <item
        android:id="@+id/perfil"
        android:title="@string/menu_item_perfil"
        android:icon="@drawable/ic_person"
        app:showAsAction="never"
    />

    <item
        android:id="@+id/pedidos"
        android:title="@string/menu_item_pedidos"
        android:icon="@drawable/ic_pedidos"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/deslogar"
        android:title="@string/menu_item_deslogar"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never"
        />

</menu>

    </item>

</menu>