<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.pagamento.Pagamento">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_tela_pagamento"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/edit_bairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_bairro"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/edit_rua_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_rua_numero"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/edit_cidade_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cidade_estado"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/edit_celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_celular"
        android:padding="15dp"
        android:maxLength="11"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/bt_fazerPagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_botao_fazer_pagamento"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:padding="15dp"
        android:layout_margin="20dp"/>

</LinearLayout>