<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.formCadastro.FormCadastro">
    <TextView
        android:id="@+id/tvTituloCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_tela_cadastro"
        android:textStyle="bold"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/container_formularios"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/container_formularios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloCadastro"

        />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_edt_text"
        android:hint="@string/hint_nome"
        android:inputType="text"
        android:maxLines="1"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintTop_toTopOf="@id/container_formularios" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_edt_text"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintTop_toBottomOf="@id/etNome" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_edt_text"
        android:hint="@string/hint_senha"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <Button
        android:id="@+id/btCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/black"
        android:padding="15dp"
        android:text="@string/texto_botao_cadastrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintTop_toBottomOf="@id/etSenha"

        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>